<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScoringSystemAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings1">Settings1</string>
    <string name="action_settings2">Settings2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_failed">Failed</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_done">Done</string>
    <string name="button_submit">Finished</string>

</resources>
