<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.scoringsystem.android.net.DisplayMessageActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_settingsAction"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_settingsAction2"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_settings1"/>
    <item
        android:id="@+id/action_settingsAction1"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_settings2"/>

</menu>